crates/pcb-zen-core/tests/snapshots/component__component_modifier_grandparent.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
    ParentInstance: Module {
        path: ParentInstance,
        source: "/Parent.zen",
    },
    ParentInstance.ChildInstance: Module {
        path: ParentInstance.ChildInstance,
        source: "/Child.zen",
        children: [
            FrozenValue(
                Component {
                    name: "R1",
                    footprint: "0603",
                    prefix: "U",
                    connections: {
                        "1": FrozenValue(
                            Net {
                                name: "A",
                                id: "<ID>",
                            },
                        ),
                        "2": FrozenValue(
                            Net {
                                name: "B",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "__resistance__": FrozenValue(
                            PhysicalValue {
                                value: 10000,
                                tolerance: 0,
                                unit: PhysicalUnitDims {
                                    current: -1,
                                    time: 0,
                                    voltage: 1,
                                    temp: 0,
                                },
                            },
                        ),
                        "child_modified": FrozenValue(
                            "yes",
                        ),
                        "gp_modified": FrozenValue(
                            "yes",
                        ),
                        "parent_modified": FrozenValue(
                            "yes",
                        ),
                        "resistance": FrozenValue(
                            "10k",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "1",
                                "2": "2",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
