crates/pcb-zen-core/tests/snapshots/component__component_modifier_order_independent.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "R1",
                    mpn: "POST_MPN",
                    manufacturer: "PostRegistrationVendor",
                    footprint: "0603",
                    prefix: "U",
                    connections: {
                        "1": FrozenValue(
                            Net {
                                name: "A",
                                id: "<ID>",
                            },
                        ),
                        "2": FrozenValue(
                            Net {
                                name: "B",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "modified": FrozenValue(
                            "yes",
                        ),
                        "resistance": FrozenValue(
                            "10k",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "1",
                                "2": "2",
                            },
                        },
                    ),
                },
            ),
            FrozenValue(
                Component {
                    name: "R2",
                    mpn: "POST_MPN",
                    manufacturer: "PostRegistrationVendor",
                    footprint: "0603",
                    prefix: "U",
                    connections: {
                        "1": FrozenValue(
                            Net {
                                name: "C",
                                id: "<ID>",
                            },
                        ),
                        "2": FrozenValue(
                            Net {
                                name: "D",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "modified": FrozenValue(
                            "yes",
                        ),
                        "resistance": FrozenValue(
                            "100k",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "1",
                                "2": "2",
                            },
                        },
                    ),
                },
            ),
            FrozenValue(
                Component {
                    name: "R3",
                    mpn: "POST_MPN",
                    manufacturer: "PostRegistrationVendor",
                    footprint: "0603",
                    prefix: "U",
                    connections: {
                        "1": FrozenValue(
                            Net {
                                name: "E",
                                id: "<ID>",
                            },
                        ),
                        "2": FrozenValue(
                            Net {
                                name: "F",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "modified": FrozenValue(
                            "yes",
                        ),
                        "resistance": FrozenValue(
                            "1k",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "1",
                                "2": "2",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
