crates/pcb-zen-core/tests/snapshots/component__component_modifier_parent.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
    },
    ChildInstance: Module {
        path: ChildInstance,
        source: "/Child.zen",
        children: [
            FrozenValue(
                Component {
                    name: "R1",
                    mpn: "PARENT_MPN",
                    manufacturer: "ParentVendor",
                    footprint: "0603",
                    prefix: "U",
                    connections: {
                        "1": FrozenValue(
                            Net {
                                name: "A",
                                id: "<ID>",
                            },
                        ),
                        "2": FrozenValue(
                            Net {
                                name: "B",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "parent_modified": FrozenValue(
                            "yes",
                        ),
                        "resistance": FrozenValue(
                            "10k",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "1",
                                "2": "2",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
