crates/pcb-zen-core/tests/snapshots/component__component_mutation_multiple.snap
---
source: crates/pcb-zen-core/tests/component.rs
expression: output
---
MPN: RC0603FR-07100KL
Manufacturer: Yageo
DNP: True
Resistance: 10k
Tolerance: 1%
{
    <root>: Module {
        path: <root>,
        source: "test.zen",
        children: [
            FrozenValue(
                Component {
                    name: "R1",
                    mpn: "RC0603FR-07100KL",
                    manufacturer: "Yageo",
                    footprint: "0603",
                    prefix: "U",
                    connections: {
                        "1": FrozenValue(
                            Net {
                                name: "A",
                                id: "<ID>",
                            },
                        ),
                        "2": FrozenValue(
                            Net {
                                name: "B",
                                id: "<ID>",
                            },
                        ),
                    },
                    properties: {
                        "__resistance__": FrozenValue(
                            PhysicalValue {
                                value: 10000,
                                tolerance: 0,
                                unit: PhysicalUnitDims {
                                    current: -1,
                                    time: 0,
                                    voltage: 1,
                                    temp: 0,
                                },
                            },
                        ),
                        "resistance": FrozenValue(
                            "100k",
                        ),
                        "tolerance": FrozenValue(
                            "1%",
                        ),
                    },
                    symbol: FrozenValue(
                        Symbol {
                            name: None,
                            pins: {
                                "1": "1",
                                "2": "2",
                            },
                        },
                    ),
                },
            ),
        ],
    },
}
[]
